[package]
name = "database_demo"
version = "0.1.0"
authors = ["Alexanderlacuna <alexanderkabua@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.5", features = ["sqlite"] }
dotenv="0.15.0"
actix-web="2.0"
actix-rt="1.1"
listenfd="0.3"
serde="1.0"
futures="0.3.5"
serde_json="1.0.56"